# ok1

./: .gitignore  3d.sh  README.md  baseline_recall.py  capacity_simulation.py  hyperboloid.py  inclass_simulation.py  memory.err  memory.out  memory_recall.py  new_style.py  plot_3neuron.py  pyproject.toml  real.sh  recall_config.py  run_exp.sh  sample_euclidean_memory.py  sample_image_memory.py  sample_memory.py  sampling.py  sim_dec.py  tc.py  tc2.py  tc3.py  test_questions.py  vis.py  vis.sh
archive/: temp.sh
archive/exp/: ext_figure4.xlsx  extract.py  figure2.xlsx  run.py
exp/: ext_figure3.xlsx  r2.py  simulate.py  test.py
notebooks/: 01_capacity_simulation.ipynb  02_inclass_simulation.ipynb  03_vis_reconstructions.ipynb
outputs/dim10/Radius2/: result.csv
outputs/dim20/Radius2/: result.csv
outputs/dim30/Radius2/: result.csv
src/icml_hyp/: recall_plot_combined_style.py
src/icml_hyp/cli/: capacity_simulation.py  inclass_simulation.py  plot_3neuron.py  vis.py
src/icml_hyp/config/: __init__.py  recall_config.py
src/icml_hyp/integrations/: wandb_utils.py
src/icml_hyp/recall/: baseline_recall.py  memory_recall.py
src/memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_batch_recall_parity.py
