[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory"
version = "0.1.0"
description = "Hyperbolic associative memory simulations (capacity, in-class, visualizations)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geomstats>=2.8.0",
    "google>=3.0.0",
    "jupyter-analysis-tools>=1.7.2",
    "numpy==1.26.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pbd>=0.9",
    "ripser>=0.6.14",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.2.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.26.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
